[Added] glow animation and overflow prevention

--- a/bj-testing/index.css
+++ b/bj-testing/index.css
@@ -1,6 +1,11 @@
+html {
+  overflow: hidden;
+}
+
 #bet {
   font-size: 2vh;
 }
+
 button {
   font-family: "Playfair Display SC", serif;
   font-size: 2vh;
@@ -11,6 +16,7 @@ button {
 
 .card-container {
   border: solid 2px rgb(255, 255, 255, 0.5);
+  border-radius: 5%;
   height: 30vh;
   margin-left: 2vh;
   margin-right: 2vh;
@@ -109,7 +115,13 @@ input {
   font-size: 4vh;
   list-style: none;
   text-align: center;
-  text-shadow: 0 0 5px rgb(255, 255, 255, 0.7);
+  text-shadow: 0 0 5px rgb(255, 255, 255, .8);
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  transition: all 1s;
+  -webkit-animation: neon1 1s ease-in-out infinite alternate;
+  -moz-animation: neon1 1s ease-in-out infinite alternate;
+  animation: neon1 1s ease-in-out infinite alternate;
 }
 
 #player-container {
@@ -118,4 +130,31 @@ input {
 
 #user-icon {
   color: #1553ff;
+}
+
+@-webkit-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 5px #fff, 0 0 5px #ff6f00, 0 0 5px #ff6f00, 0 0 5px #ff6f00, 0 0 5px #ff6f00, 0 0 5px #ff6f00;
+  }
+}
+
+@-moz-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 5px #fff, 0 0 5px #ff6f00, 0 0 5px #ff6f00, 0 0 5px #ff6f00, 0 0 5px #ff6f00, 0 0 5px #ff6f00;
+  }
+}
+
+@keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00, 0 0 10px #ff6f00;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 5px #fff, 0 0 5px #FF1177, 0 0 5px #FF1177, 0 0 5px #FF1177, 0 0 5px #FF1177, 0 0 5px #FF1177;
+  }
 }
